<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.PasswordsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/passwords_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_password" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/big_margin"
        android:backgroundTint="@android:color/holo_orange_light"
        android:src="@drawable/ic_baseline_add_24"
        tools:ignore="ContentDescription" />

</FrameLayout>