<resources>
    <string name="app_name">Passwords Keeper</string>
    <string name="hint_enter_password">Введите пароль</string>
    <string name="button_enter">Войти</string>
    <string name="site_text_view">Сайт: %s</string>
    <string name="password_text_view">Пароль: %s</string>
    <string name="incorrect_site_name">Некорректное название сайта. Прочитайте условия внимательно</string>
    <string name="incorrect_password">Некорректный пароль. Прочитайте условия внимательно</string>
    <string name="need_create_password">Требуется создать пароль, пожалуйста, запомните его</string>
    <string name="button_save_password">Запомнить пароль</string>
    <string name="wrong_password">Введен неверный пароль</string>
    <string name="empty_password_field">Поле для пароля не должно быть пустым</string>
    <string name="hint_site_name">Введите название сайта</string>
    <string name="button_save_site_password">Сохранить</string>
    <string name="correct_password_conditions">Пароль должен содержать от 6 до 10 символов: только латинские буквы и цифры, хотя бы одну цифру, хотя бы одну заглавную и хотя бы одну строчную буквы</string>
    <string name="correct_site_and_password_conditions">Название сайта должно состоять минимум из двух символов (латиница и цифры) и оканчиваться на .com или .ru. Пароль должен содержать от 6 до 10 символов: только латинские буквы и цифры, хотя бы одну цифру, хотя бы одну заглавную и хотя бы одну строчную буквы</string>
</resources>